<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroCnam</string>
    <string name="action_settings">Settings</string>
    <string name="bonjour">Bienvenue dans votre application banquaire, authentifiez vous pour commencer</string>
    <string name="login">Login :</string>
    <string name="mdp">Mot de passe :</string>
    <string name="connection">Connection</string>
    <string name="title_activity_sommaire">Sommaire</string>
    <string name="sommaire">Voici la liste des fonctionalités disponnible</string>
    <string name="mescomptes">Mes comptes</string>
    <string name="virement">Effectuer un Virement</string>
    <string name="rib">Afficher RIB</string>
    <string name="title_activity_selection_comptes">SelectionComptes</string>
    <string name="selectionComptes">Selectionez un des vos comptes</string>
    <string name="title_activity_effectuer_virement">EffectuerVirement</string>
    <string name="accueilVirement">Enregistrer un virement banquaire</string>
    <string name="title_activity_afficher_rib">AfficherRib</string>
    <string name="accueilRib">Voici votre RIB</string>
    <string name="nagence">Numéro d\'agence:</string>
    <string name="ncompte">Numéro de compte:</string>
    <string name="npersonne">Clé d\'identification:</string>
    <string name="ncible">Id du compte destinataire</string>
    <string name="montant">Somme à transférer</string>
    <string name="validation">Validez le virement</string>
    <string name="details">Details complémentaires</string>
    <string name="infoRib">Transmettez votre numéro d\'agence,votre numéro de compte
    et ainsi que votre clé d\'indentification à un tiers pour recevoir un virement banquaire</string>

</resources>
